# mcp-tfstate-reader

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/mcp_tfstate_reader/: __init__.py  server.py
tests/: test_server.py
