[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tfstate-reader"
version = "0.2.0"
description = "MCP server for auditing Terraform state files for security misconfigurations"
authors = [{ name = "Berkay Yildirim" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "terraform", "security", "infrastructure", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
]

[project.scripts]
mcp-tfstate-reader = "mcp_tfstate_reader.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tfstate_reader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/berkayyildirim/mcp-tfstate-reader"
Repository = "https://github.com/berkayyildirim/mcp-tfstate-reader"
Changelog = "https://github.com/berkayyildirim/mcp-tfstate-reader/blob/main/CHANGELOG.md"